--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>nakaya</title>
+    <title>Nakaya's Portfolio</title>
+    <!--<link rel="icon" href="assets/nakaya.PNG" type="image/png">-->
   </head>
   <body>
     <div id="app"></div>
