--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Nakaya's Portfolio</title>
-    <!--<link rel="icon" href="assets/nakaya.PNG" type="image/png">-->
+    <!--<link rel="icon" href="./favicon.ico" type="image/x-icon">-->
   </head>
   <body>
     <div id="app"></div>
